--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "like",
     "test"
   ],
-  "author": "Zation",
+  "author": "Zation <zation1@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/zation/chai-like/issues"
