--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chai-like",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "A JSON matcher for chai",
   "main": "index.js",
   "scripts": {
@@ -14,7 +14,9 @@
     "chai",
     "json",
     "like",
-    "test"
+    "test",
+    "integration",
+    "API"
   ],
   "author": "Zation <zation1@gmail.com>",
   "license": "MIT",
