Add chai-docs keywords to package.json

--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   },
   "keywords": [
     "chai",
+    "chai-plugin",
+    "browser",
+    "objects",
+    
     "json",
     "like",
     "test",
