--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
   },
   "homepage": "https://github.com/zation/chai-like",
   "devDependencies": {
-    "chai": "^2.1.2",
-    "mocha": "^2.2.1"
+    "chai": "2 - 4",
+    "mocha": "2 - 4"
+  },
+  "peerDependencies": {
+    "chai": "2 - 4"
   }
 }
