--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A JSON matcher for chai",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test"
+    "test": "nyc mocha test",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,14 @@
   "homepage": "https://github.com/zation/chai-like",
   "devDependencies": {
     "chai": "^2.1.2",
-    "mocha": "^2.2.1"
+    "coveralls": "^3.0.0",
+    "mocha": "^2.2.1",
+    "nyc": "^11.4.1"
+  },
+  "nyc": {
+    "reporter": [
+      "text",
+      "text-summary"
+    ]
   }
 }
