--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,11 @@ sudo: false
 language: node_js
 
 node_js:
-  - "4.0"
-  - "6.0"
-  - "8.0"
+  - 4 # to be removed 2018-04-01
+  - 6 # to be removed 2019-04-01
+  - 7 # to be removed 2017-06-30
+  - lts/* # safety net; don't remove
+  - node # safety net; don't remove
 
 after_success:
   - npm run coverage
